# DeepTrace

./: .gitignore  CONFIGURE_CARL_ENV_VARS.md  DEPLOYMENT_NOTES.md  build.sh  pyproject.toml  requirements-web.txt  requirements.txt  setup.py  test_case_browser.py  wrangler.toml
.github/workflows/: azure-deploy.yml  deploy-cloudflare.yml
deployments/911840297d153ae09a738e1a3fb63e4847b5bf51/: status.xml
src/deeptrace/: ai_client.py  db.py  main.py  namus_client.py  nlp.py  state.py
src/deeptrace/commands/: cases.py  evidence.py  hypotheses.py  sources.py  suspects.py  timeline.py
src/deeptrace/dashboard/: __init__.py  server.py
src/deeptrace/dashboard/routes/: ach.py  case_browser.py  case_selector.py  evidence.py  files.py  hypotheses.py  import_data.py  network.py  source_ai.py  sources.py  suspects.py  timeline.py
src/deeptrace/dashboard/static/: style.css  theme-toggle.js  themes.css
src/deeptrace/dashboard/templates/: base.html  case_browser.html  case_selector.html  import_data.html  modern_case_selector.html  sources.html
tests/: test_cases.py  test_db.py  test_evidence.py  test_files.py  test_hypotheses.py  test_nlp.py  test_sources.py  test_suspects.py  test_timeline.py
