[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deeptrace"
version = "0.1.0"
description = "Cold case investigation platform with AI-powered analytical reasoning."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0",
]
network = [
    "networkx>=3.0",
    "pyvis>=0.3.2",
]
dashboard = [
    "flask>=3.0",
    "networkx>=3.0",
    "Pillow>=10.0",
]
ai = [
    "requests>=2.28.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.5.0",
]

[project.scripts]
deeptrace = "deeptrace.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/deeptrace"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Core Pydantic V1 functionality:UserWarning",
]
